[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/GhodBase.RunInstance/PidContainer.gd" type="Script" id=1]
[ext_resource path="res://addons/GhodBase.RunInstance/skull.png" type="Texture" id=2]
[ext_resource path="res://addons/GhodBase.RunInstance/return.png" type="Texture" id=3]
[ext_resource path="res://addons/GhodBase.RunInstance/trash-can.png" type="Texture" id=4]

[node name="PidContainer" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 30.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkRestart" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 30.0
pressed = true

[node name="lblPid" type="Label" parent="."]
margin_left = 28.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 22.0
text = "5555"

[node name="btnKill" type="Button" parent="."]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 30.0
hint_tooltip = "Kill application"
icon = ExtResource( 2 )

[node name="btnReRun" type="Button" parent="."]
margin_left = 100.0
margin_right = 132.0
margin_bottom = 30.0
hint_tooltip = "Restart application"
icon = ExtResource( 3 )

[node name="btnRemove" type="Button" parent="."]
margin_left = 136.0
margin_right = 168.0
margin_bottom = 30.0
hint_tooltip = "Remove application from list"
icon = ExtResource( 4 )

[node name="btnViewOutput" type="Button" parent="."]
visible = false
margin_left = 172.0
margin_right = 229.0
margin_bottom = 30.0
text = "Output"

[connection signal="pressed" from="btnKill" to="." method="_on_btnKill_pressed"]
[connection signal="pressed" from="btnReRun" to="." method="_on_btnReRun_pressed"]
[connection signal="pressed" from="btnRemove" to="." method="_on_btnRemove_pressed"]
[connection signal="pressed" from="btnViewOutput" to="." method="_on_btnViewOutput_pressed"]
